Closed Bug 631412 Opened 15 years ago Closed 15 years ago

Bug 629401 breaks non-libxul builds due to unresolved reference to nsContentUtils::DispatchTrustedEvent(nsIDocument*, nsISupports*, nsAString_internal const&, int, int, int*)

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
mozilla2.0b12

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

Undefined symbols: "nsContentUtils::DispatchTrustedEvent(nsIDocument*, nsISupports*, nsAString_internal const&, int, int, int*)", referenced from: CarbonEventModelFailureEvent::Run() in nsNPAPIPluginInstance.o ld: symbol(s) not found collect2: ld returned 1 exit status make[5]: *** [libgkplugin.dylib] Error 1 make[4]: *** [libs] Error 2 make[3]: *** [libs_tier_platform] Error 2 make[2]: *** [tier_platform] Error 2 make[1]: *** [default] Error 2 make: *** [build] Error 2
FWIW, this breaks my non-libxul build on x86_64 Linux, too, with the same mention of "In function `CarbonEventModelFailureEvent::Run()':" (Is CarbonEventModelFailureEvent even supposed to be built under Linux? My initial assumption was that it was Mac-specific, based on the name, but I don't really know.)
OS: Mac OS X → All
Hardware: x86 → All
Attached patch Patch (v1) (obsolete) — Splinter Review
Borrow the code from nsContentUtils for non-libxul builds. (This makes me sad. Real sad.)
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #509774 - Flags: review?
Attached patch Patch (v2)Splinter Review
Attachment #509774 - Attachment is obsolete: true
Attachment #509786 - Flags: review?(khuey)
Attachment #509774 - Flags: review?
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b12
Thanks for the fix Ehsan!
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: