Bug 631412 - Bug 629401 breaks non-libxul builds due to unresolved reference to nsContentUtils::DispatchTrustedEvent(nsIDocument*, nsISupports*, nsAString_internal const&, int, int, int*); r=khuey a=NPOTB