content/base/src/nsContentUtils.cpp
@@ -6504,3 +6504,21 @@ nsIContentUtils2::CheckSameOrigin(nsIChannel *aOldChannel, nsIChannel *aNewChann
 {
   return nsContentUtils::CheckSameOrigin(aOldChannel, aNewChannel);
 }
+
+#ifndef MOZ_ENABLE_LIBXUL
+
+NS_IMPL_ISUPPORTS1(nsIContentUtils_MOZILLA_2_0_BRANCH, nsIContentUtils_MOZILLA_2_0_BRANCH)
+
+nsresult
+nsIContentUtils_MOZILLA_2_0_BRANCH::DispatchTrustedEvent(nsIDocument* aDoc,
+                                                         nsISupports* aTarget,
+                                                         const nsAString& aEventName,
+                                                         PRBool aCanBubble,
+                                                         PRBool aCancelable,
+                                                         PRBool *aDefaultAction)
+{
+  return nsContentUtils::DispatchTrustedEvent(aDoc, aTarget, aEventName,
+                                              aCanBubble, aCancelable, aDefaultAction);
+}
+
+#endif
